--- a/src/arches_fossils/arches_fossils/settings.py.j2
+++ b/src/arches_fossils/arches_fossils/settings.py.j2
@@ -42,7 +42,7 @@ TEMPLATES[0]['DIRS'].insert(0, os.path.join(APP_ROOT, 'templates'))
 LOCALE_PATHS.append(os.path.join(APP_ROOT, 'locale'))
 
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = '@s!z9a^*1wolrdhg)nalpylh)sc=(6z^10kjp66(2zi=m@_&63'
+SECRET_KEY = '{ jenkins_secret_key }'
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
