Moved BCHP local settings to private repo and sync'd settings file Started customizing L&F

--- a/src/arches_bchp/arches_bchp/templates/index.htm
+++ b/src/arches_bchp/arches_bchp/templates/index.htm
@@ -63,10 +63,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
                     <div class="relative nav-brand-container">
                         <div class="navbar-brand-v5-icon-container">
-                            <img class="navbar-brand-v5-icon" src="{% static 'img/landing/Arches_logo_white.png' %}" alt="Arches Logo">
+                            <img class="navbar-brand-v5-icon" src="{% static 'img/logo/BCID_H_gry_rev_clipped.png' %}" alt="Arches Logo">
                         </div>
                         <div class="application-name">
-                            <h1>{% blocktrans %}Arches | {{version}}{% endblocktrans %}</h1>
+                            <h1>{% blocktrans %}BC Registry of Historic Places {% endblocktrans %}</h1>
                         </div>
                     </div>
                 </div>
