--- a/src/arches_fossils/arches_fossils/templates/index.htm
+++ b/src/arches_fossils/arches_fossils/templates/index.htm
@@ -63,10 +63,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
                 <div class="relative nav-brand-container">
                     <div class="navbar-brand-v5-icon-container">
-                        <img class="navbar-brand-v5-icon" src="{% static 'img/landing/Arches_logo_white.png' %}" alt="Arches Logo">
+                        <img class="navbar-brand-v5-icon" src="{% static 'img/logo/BCID_H_gry_rev_clipped.png' %}" alt="Arches Logo">
                     </div>
                     <div class="application-name">
-                        <h1>{% blocktrans %}Arches | {{version}}{% endblocktrans %}</h1>
+                        <h1>{% blocktrans %}Fossils Management System | {{version}}{% endblocktrans %}</h1>
                     </div>
                 </div>
             </div>
@@ -74,10 +74,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             <div id="myNavbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#info-block-1">{% trans "Arches Features" %}</a>
+                        <a href="#info-block-1">{% trans "About" %}</a>
                     </li>
                     <li>
-                        <a href="{% url 'search_home' %}">{% trans "Search Arches" %}</a>
+                        <a href="{% url 'search_home' %}">{% trans "Search Fossils" %}</a>
                     </li>
                     {% if user|can_create_resource_instance and user.username != 'anonymous' %}
                     <li>
