--- a/src/arches_fossils/arches_fossils/templates/views/components/functions/bc-fossils-descriptors.htm
+++ b/src/arches_fossils/arches_fossils/templates/views/components/functions/bc-fossils-descriptors.htm
@@ -24,7 +24,7 @@
 
                     <div class="col-xs-12">
                         <select data-placeholder="{% trans "Select a card from which to choose nodes to power your primary name identifier." %}"
-                        multiple data-bind="selectedOptions: name.card_names,
+                        multiple data-bind="selectedOptions: name.node_ids,
                         options: cards, optionsText: 'name', optionsValue: 'nodeid', chosen: {width: '100%',
                         allow_single_deselect: true, disable_search_threshold: 15}"></select>
                     </div>
@@ -79,7 +79,7 @@
 
                     <div class="col-xs-12">
                         <select data-placeholder="{% trans "Select a card from which to choose nodes to power your primary description identifier." %}"
-                        multiple data-bind="selectedOptions: description.card_names,
+                        multiple data-bind="selectedOptions: description.node_ids,
                         options: cards, optionsText: 'name', optionsValue: 'nodeid', chosen: {width: '100%',
                         allow_single_deselect: true, disable_search_threshold: 15}"></select>
                     </div>
@@ -132,7 +132,7 @@
 
                     <div class="col-xs-12">
                         <select data-placeholder="{% trans "Select a card from which to choose nodes to power your map_popup description." %}"
-                        multiple data-bind="selectedOptions: map_popup.card_names,
+                        multiple data-bind="selectedOptions: map_popup.node_ids,
                         options: cards, optionsText: 'name', optionsValue: 'nodeid', chosen: {width: '100%',
                         allow_single_deselect: true, disable_search_threshold: 15}"></select>
                     </div>
