82 - Redirect all unauthenticated users to fossils management page

--- a/src/arches_fossils/arches_fossils/templates/index.htm
+++ b/src/arches_fossils/arches_fossils/templates/index.htm
@@ -76,19 +76,15 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     <li>
                         <a href="#info-block-1">{% trans "About" %}</a>
                     </li>
+                    {% if user|can_create_resource_instance and user.username != 'anonymous' %}
                     <li>
                         <a href="{% url 'search_home' %}">{% trans "Search Fossils" %}</a>
                     </li>
-                    {% if user|can_create_resource_instance and user.username != 'anonymous' %}
                     <li>
                         <a href="{% url 'resource' %}" target="_blank">{% trans "Manage" %}</a>
                     </li>
                     {% endif %}
-                    {% if user.username == 'anonymous' %}
-                    <li>
-                        <a class="application-login" id="auth-link" href="{% url 'auth' %}?next={% url 'home' %}{% if user.username != 'anonymous' %}&logout=true{% endif %}">{% trans "Sign in" %}</a>
-                    </li>
-                    {% else %}
+                    {% if user.username  %}
                     <li>
                         <a class="auth-welcome" href="{% url 'user_profile_manager' %}">
                             {% trans "Welcome, " %} {{ user.first_name|default:user.username }}
