--- a/src/arches_fossils/arches_fossils/templates/index.htm
+++ b/src/arches_fossils/arches_fossils/templates/index.htm
@@ -66,7 +66,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                         <img class="navbar-brand-v5-icon" src="{% static 'img/logo/BCID_H_gry_rev_clipped.png' %}" alt="Arches Logo">
                     </div>
                     <div class="application-name">
-                        <h1>{% blocktrans %}Fossils Management System | {{version}}{% endblocktrans %}</h1>
+                        <h1>{% blocktrans %}BC Fossils Management System{% endblocktrans %}</h1>
                     </div>
                 </div>
             </div>
@@ -160,13 +160,14 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                         <!-- SLIDE 1 -->
                         <li data-transition="fade" data-slotamount="9" data-masterspeed="0" data-title="Slide 1">
                             <!-- MAIN IMAGE -->
-                            <img src="{% static 'img/landing/bhutan_tigersnest_lr.jpg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+<!--                            <img src="{% static 'img/landing/bhutan_tigersnest_lr.jpg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">-->
+                            <img src="{% static 'img/front/mcabee.jpg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
                             <!-- LAYERS -->
                             <!-- NEW LAYER -->
                             <div class="tp-caption sft start text-bold v5-splash-caption" delay="4500" data-hoffset="0" data-y="400" data-speed="800" data-start="100" data-easing="Back.easeInOut" data-endspeed="300" data-x="0">
-                                <h2>{% blocktrans %}Arches {{version}}{% endblocktrans %}</h2>
-                                <p>{% trans "A web and mobile platform for" %}</p>
-                                <p>{% trans "managing your most important resource information" %}</p>
+                                <h2>{% blocktrans %}BC Fossils Management System{% endblocktrans %}</h2>
+                                <p>{% trans "Providing information, guidance and policies to support" %}</p>
+                                <p>{% trans "protection and management of fossils and fossil sites in B.C." %}</p>
                             </div>
 
                             <!-- Gradient -->
@@ -174,7 +175,8 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
                             <!-- Attribution -->
                             <div class="image-attribution">
-                                <span>{% trans "Taktsang Palphug Monastery (also known as Paro Takstang or Tiger's Nest Monastery), Bhutan" %}</span>
+<!--                                <span>{% trans "Taktsang Palphug Monastery (also known as Paro Takstang or Tiger's Nest Monastery), Bhutan" %}</span>-->
+                                <span>{% trans "McAbee collection site. Photo by Elisabeth Deom" %}</span>
                             </div>
                         </li>
                     </ul>
