BCRHP front page updates for demo

--- a/src/arches_bchp/arches_bchp/templates/index.htm
+++ b/src/arches_bchp/arches_bchp/templates/index.htm
@@ -160,13 +160,13 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             <!-- SLIDE 1 -->
                             <li data-transition="fade" data-slotamount="9" data-masterspeed="0" data-title="Slide 1">
                                 <!-- MAIN IMAGE -->
-                                <img src="{% static 'img/landing/landing-primary.jpg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+                                <img src="{% static 'img/front/craigdarroch.jpeg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
                                 <!-- LAYERS -->
                                 <!-- NEW LAYER -->
                                 <div class="tp-caption sft start text-bold v5-splash-caption" delay="4500" data-hoffset="0" data-y="400" data-speed="800" data-start="100" data-easing="Back.easeInOut" data-endspeed="300" data-x="0">
                                     <h2>{% blocktrans %}BC Registry of Historic Places{% endblocktrans %}</h2>
-                                    <p>{% trans "Official Registry of historic places for British Columbia" %}</p>
-                                    <p style="padding-bottom: 15px;">{% blocktrans %}({{version}}){% endblocktrans %}</p>
+                                    <p>{% trans "Official Registry of historic places for" %}</p>
+                                    <p>{% trans "British Columbia" %}</p>
                                 </div>
 
                                 <!-- Gradient -->
