dev - updated image attribution

--- a/src/arches_fossils/arches_fossils/templates/index.htm
+++ b/src/arches_fossils/arches_fossils/templates/index.htm
@@ -172,7 +172,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             <!-- Attribution -->
                             <div class="image-attribution">
 <!--                                <span>{% trans "Taktsang Palphug Monastery (also known as Paro Takstang or Tiger's Nest Monastery), Bhutan" %}</span>-->
-                                <span>{% trans "McAbee collection site. Photo by Elisabeth Deom" %}</span>
+                                <span>{% trans "McAbee Heritage Site. Photo by Elisabeth Deom" %}</span>
                             </div>
                         </li>
                     </ul>
