--- a/src/arches_fossils/arches_fossils/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/arches_fossils/arches_fossils/templates/views/components/map_popup/toggle-map-popup.htm
@@ -44,6 +44,13 @@
 <div class="hover-feature-footer">
     <div>
         {% block footer %}
+        <!-- ko if: mapCard.showSelectAsFilter(feature) -->
+        <a data-bind="if: mapCard.showSelectAsFilter(feature), click: function () {
+            mapCard.selectFeatureAsFilter(feature); }" href="javascript:void(0)">
+            <i class="ion-ios-refresh-empty"></i>
+            <span data-bind="text: mapCard.selectText"></span>
+        </a>
+        <!--/ko-->
         <!-- ko if: resourceinstanceid -->
         <a data-bind="click: function () {
             window.open(reportURL + ko.unwrap(resourceinstanceid));
