103 - Added arches core views/search.js for update, updated filter icon to funnel in map popup

--- a/src/arches_fossils/arches_fossils/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/arches_fossils/arches_fossils/templates/views/components/map_popup/toggle-map-popup.htm
@@ -47,7 +47,7 @@
         <!-- ko if: mapCard.showSelectAsFilter(feature) -->
         <a data-bind="if: mapCard.showSelectAsFilter(feature), click: function () {
             mapCard.selectFeatureAsFilter(feature); }" href="javascript:void(0)">
-            <i class="ion-ios-refresh-empty"></i>
+            <i class="ion-funnel"></i>
             <span data-bind="text: mapCard.selectText"></span>
         </a>
         <!--/ko-->
