103 - Hide popup edit button for non-arches features

--- a/src/arches_fossils/arches_fossils/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/arches_fossils/arches_fossils/templates/views/components/map_popup/toggle-map-popup.htm
@@ -59,7 +59,7 @@
             {% trans "Report" %}
         </a>
         <!--/ko-->
-        <!-- ko if: showEditButton -->
+        <!-- ko if: mapCard.isArchesResource(feature) && showEditButton -->
         <a data-bind="click: function () {
             window.open(editURL + ko.unwrap(resourceinstanceid));
         }" href="javascript:void(0)">
