Reworked select cadastral feature as geometry functionality for new core popup functionality

--- a/src/arches_bchp/arches_bchp/templates/views/components/widgets/map.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/components/widgets/map.htm
@@ -49,6 +49,9 @@
                 }, {
                     text: '{% trans "Polygon" %}',
                     id: 'Polygon'
+                }, {
+                    text: '{% trans "Feature" %}',
+                    id: 'Feature'
                 }]
             }
         }">
