114 - Added package changes for reworked cadastral select

--- a/src/arches_bchp/arches_bchp/templates/views/components/toggle-map-popup.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/components/toggle-map-popup.htm
@@ -47,7 +47,7 @@
         <!-- ko if: mapCard.showSelectFeatureAsSource && mapCard.showSelectFeatureAsSource(feature) -->
         <a data-bind="if: mapCard.showSelectFeatureAsSource(feature), click: function () {
             mapCard.selectFeatureAsSource(feature); }" href="javascript:void(0)">
-            <i class="ion-funnel"></i>
+            <i class="icon ion-plus-round"></i>
             <span data-bind="text: mapCard.selectText"></span>
         </a>
         <!--/ko-->
