186 - Allow map filtering by BC Fossil Site geometries

--- a/src/arches_fossils/arches_fossils/templates/views/components/search/map-filter.htm
+++ b/src/arches_fossils/arches_fossils/templates/views/components/search/map-filter.htm
@@ -60,6 +60,14 @@
             </div>
         </div>
         <!--/ko-->
+        <!-- ko if: !!featureSearchError()  -->
+        <div class="geojson-error-list">
+            {% trans "Search has following errors that must be resolved:" %}
+            <ul>
+                <li data-bind="text: featureSearchError"></li>
+            </ul>
+        </div>
+        <!--/ko-->
 
     </div>
     <!-- /ko-->
