dev - Make search cards scrollable for longer dataset

--- a/src/arches_common/media/css/project.css
+++ b/src/arches_common/media/css/project.css
@@ -2,6 +2,14 @@
     width: 100%;
 }
 
+.hover-feature-expand {
+    text-align: right;
+}
+
 .workbench-card-sidepanel-body {
     height: 100%;
+}
+
+.search-listing-body {
+    overflow-y: scroll;
 }
