194 - Edit popup always shown for cadastral layer

--- a/src/arches_bchp/arches_bchp/templates/views/components/map_popup/edit-map-popup.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/components/map_popup/edit-map-popup.htm
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block footer %}
-<!-- ko if: mapCard.showSelectFeatureAsSource(feature) -->
+<!-- ko if: !!mapCard.showSelectFeatureAsSource && mapCard.showSelectFeatureAsSource(feature) -->
 <a data-bind="if: mapCard.showSelectFeatureAsSource(feature), click: function () {
     mapCard.selectFeature(feature);
 }" href="javascript:void(0)">
