--- a/src/arches_bchp/arches_bchp/templates/views/report-templates/bcrhp_site.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/report-templates/bcrhp_site.htm
@@ -91,7 +91,7 @@
     <div class="rp-report-section relative rp-report-section-root">
         <div class="rp-report-section-title">
             <div class="rp-card-section">
-                <table>
+                <table style="margin-right: 60px; margin-left: -50px">
                     <tr>
                         <td>
                             <!-- ko let: { card: getCardWithName('Site Names') } -->
@@ -145,11 +145,25 @@
                     </tr>
                     <tr>
                         <td>
-                            <!--dl class="dl-horizontal" data-bind="css: {'provisional': ko.unwrap(tile.provisionaledits) !== null && tile.userisreviewer === false}"-->
-                            <dl class="dl-horizontal">
+                            <!-- ko let: { card: getCardWithName(['BC Heritage Resource Place', 'BC Property Address']) } -->
+                            <!-- ko let: { widget: getWidgetWithLabel(card, 'Borden Number') } -->
+                            <!-- ko foreach: { data: card.tiles, as: 'tile' } -->
+                            <dl class="dl-horizontal" data-bind="css: {'provisional': ko.unwrap(tile.provisionaledits) !== null && tile.userisreviewer === false}">
                             <dt>Civic Address</dt>
-                            <dd>To Do</dd>
+                                <dd data-bind="component: {
+                                            name: 'civic-address-widget',
+                                            params: {
+                                                tile: tile,
+                                                card: card,
+                                                label: 'hi',
+                                                value: tile.data,
+                                                state: 'display_value',
+                                            }
+                                        }, click: function(){console.log(card);}"></dd>
                             </dl>
+                                <!-- /ko -->
+                                <!-- /ko -->
+                                <!-- /ko -->
                         </td>
                         <td>
                             <!-- ko let: { card: getCardWithName('BC Right') } -->
